test/spec_vectors/memory/fail/module_23.wat
(module (memory 0 65537))